# bachelor-thesis-implementation

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  requirements.txt
benchmark/: CMakeLists.txt  benchmark.cpp
benchmark/EPYC/: benchmark.cpp
benchmark/generate-and-write-out/: benchmark.cpp  benchmark_block.cpp  benchmark_slotted.cpp
benchmark/materialization/: benchmark.cpp
benchmark/partition/: benchmark.cpp
benchmark/shuffle/: benchmark.cpp
benchmark/tuple-generator/: benchmark.cpp
include/cmp/morsel-creation/: CollaborativeMorselCreator.hpp  CollaborativeMorselCreator2.hpp
include/cmp/orchestration/: CollaborativeMorselProcessOrchestrator.hpp  CollaborativeMorselProcessingOrchestrator.hpp  CollaborativeMorselProcessingThreadPoolOrchestrator.hpp  CollaborativeMorselProcessingThreadPoolWithProcessingUnitsOrchestrator.hpp
include/cmp/thread-pool/: CmpThreadPool.hpp  CmpThreadPoolWithProcessingUnits.hpp
include/cmp/worker/: CmpProcessor.hpp  CmpProcessorOfUnit.hpp  process_morsel_cmp_batched.hpp
include/common/morsel-creation/: MorselCreator.hpp
include/hybrid/chunk-creation/: ChunkCreator.hpp
include/hybrid/orchestration/: HybridOrchestrator.hpp
include/hybrid/worker/: request_and_process_chunk.hpp
include/in-place_sort/: sort_partition.hpp
include/input_data_storage/: MorselManager.hpp
include/input_preparation/: BinaryRelation.hpp  MmapDeleter.hpp
include/lpam/orchestrator/: LocalPagesAndMergeOrchestrator.hpp
include/lpam/worker/: process_morsel_lpam.hpp
include/morsel-driven/input_data_storage/: MorselManager.hpp
include/morsel-driven/output_data_storage/: PartitionManager.hpp
include/morsel-driven/worker/: process_morsels.hpp
include/on-demand/morsel-creation/: MorselCreator.hpp
include/on-demand/orchestration/: OnDemandOrchestrator.hpp  OnDemandSingleThreadOrchestrator.hpp
include/on-demand/worker/: process_morsel.hpp
include/output_data_storage/: LockFreeList.hpp  PartitionManager.hpp
include/radix/materialization/: ContiniousMaterialization.hpp
include/radix/orchestration/: RadixOrchestrator.hpp  RadixSelectiveOrchestrator.hpp
include/radix/output_data_storage/: RadixPartitionManager.hpp
include/radix/worker/: PartitionInfo.hpp  process_radix_chunk.hpp  process_radix_chunk_futures.hpp  process_radix_chunk_selectively.hpp
include/slotted-page/: ManagedSlottedPage.hpp
include/slotted-page/page-implementation/: HeaderInfo.hpp  LockFreeManagedSlottedPage.hpp  ManagedSlottedPage.hpp  RawSlottedPage.hpp  SlotInfo.hpp
include/slotted-page/page-manager/: HybridPageManager.hpp  LocalPagesAndMergePageManager.hpp  LockFreePageManager.hpp  OnDemandPageManager.hpp  OnDemandSingleThreadPageManager.hpp  PageWriteInfo.hpp  PartitionData.hpp  RadixPageManager.hpp
include/slotted-page/page-pool/: SlottedPagePool.hpp
include/smb/orchestration/: SmbBatchedOrchestrator.hpp  SmbLockFreeBatchedOrchestrator.hpp  SmbLockFreeOrchestrator.hpp  SmbOrchestrator.hpp  SmbSingleThreadOrchestrator.hpp
include/smb/worker/: process_morsel_smb.hpp  process_morsel_smb_batched.hpp  process_morsel_smb_lock_free.hpp  process_morsel_smb_lock_free_batched.hpp
include/tuple-generator/: BatchedTupleGenerator.hpp  FutureBasedTupleGenerator.hpp  MultithreadedTupleGenerator.hpp
include/tuple-types/: tuple-types.hpp
include/util/: PaddedMutex.hpp  get_tuple_num_scaling_value.hpp  partitioning_function.hpp
include/util/padded/: PaddedAtomic.hpp  PaddedMutex.hpp
include/worker/: partitioning_function.hpp  process_morsels.hpp
input_data/: create_input_data.py
plot/: apache_flink_plots.py  benchmark_plots.py  epyc-theoretical-slotted-page.json  extract_data_from_slotted_page_write_out.py  laptop-theoretical-slotted-page.json  memory_plot.py  output  partition_plot.py  server-theoretical-slotted-page copy.json  server-theoretical-slotted-page-O3.json
profile_data/: rename-profile-files.sh
prototype/: CMakeLists.txt  README.md
prototype/benchmark/: benchmark.cpp
prototype/include/input_preparation/: BinaryRelation.hpp
prototype/include/morsel-driven/output_data_storage/: LockFreeList.hpp
prototype/include/radix/output_data_storage/: RadixPartitionManager.hpp
prototype/include/radix/worker/: process_radix_chunk_futures.hpp
prototype/include/util/: partitioning_function.hpp
prototype/include/util/padded/: PaddedMutex.hpp
prototype/input_data/: create_input_data.py
prototype/src/: CMakeLists.txt  main.cpp
prototype/src/morsel-driven/output_data_storage/: LockFreeListBasedPartitionManager.cpp  StdVectorBasedPartitionManager.cpp
script/: SMB-MB-experiment.sh  SMB-MB-write-out-experiment.sh
src/: CMakeLists.txt  main.cpp
src/morsel-driven/worker/: process_morsels.cpp
src/output_data_storage/: LockFreeListBasedPartitionManager.cpp  StdVectorBasedPartitionManager.cpp
src/worker/: process_morsels.cpp
test/: CMakeLists.txt
test/slotted-page/page-implementation/: test_LockFreeManagedSlottedPage.cpp  test_ManagedSlottedPage.cpp  test_RawSlottedPage.cpp
test/slotted-page/page-manager/: test_LockFreePageManager.cpp  test_OnDemandPageManager.cpp  test_OnDemandPageSingleThreadManager.cpp
